# MaxQuasiClique

./: CMakeLists.txt  Makefile  README.md  benchmark.py  compile.sh  compile_and_run_two_phase.sh  deeptosolutions.py  main.cpp  output.txt  run_core_based.sh  run_diameter_constrained.sh  run_flywire.sh  run_flywire_with_conversion.sh  run_flywire_with_conversion_enhanced.sh  run_flywire_with_two_phase.sh  run_with_known_seeds.sh  solution.txt  solutionAtoB.py  solutionExamin.py  solution_50_146.txt  solution_50_151.txt  solution_50_175_2.txt  solution_in_progress.txt  verify_solution.py
analysis_results/: core_nodes copy.txt  node_frequency.csv  subgraph_summary.csv
data/: analyze_subgraph.py  id_mapping.csv  known_solution.txt  max_clique_submission_benchmark_162.csv  readbenchmarktomyindex.py
docs/: ALGORITHM_DOCUMENTATION.md  Algorith_extended.md  FLYWIRE_INSTRUCTIONS.md  FLYWIRE_README.md
results/: compare.py  flywire_solution_analysis.json  flywire_solution_original_ids.txt  flywire_solution_summary.json  four175.csv
scripts/: analyze_solution.py  convert_large_ids.py  convert_seed_ids.py  convert_simple.py  extract_solution_insights.py  generate_seed_file.py  generate_test_graph.py  map_results_to_original_ids.py  prepare_flywire_data.py  recommended_seeds.txt  run_flywire_analysis.py  solution_sequential_ids.txt
solutions/: kcore_solution.txt  merged_solution.txt  solution_50_175_1.txt
src/: CommunityDetector.cpp  CommunityDetector.h  DiameterConstrainedQuasiCliqueSolver.cpp  DiameterConstrainedQuasiCliqueSolver.h  Graph.cpp  Graph.h  ThreadPool.cpp  (+8 more)
(+149 files in other folders)
